MODEXPS-203 return empty job list for QuartzExportJobScheduler::scheduleExportJob